# blender_clone

./: CLAUDE.md  CMakeLists.txt  LUA_API.md  Makefile  README.md  blender_clone.sln  blender_clone.vcxproj  build.ps1  imgui.ini  main.cpp  project.scene  shortcut.md
.cache/clangd/index/: FA6FreeSolidFontData.h.E07FA85970102BB5.idx  IconsFontAwesome6.h.6EB77C32F6AE5C18.idx  camera.cpp.35BC1387B3BC2D89.idx  camera.h.78BDBF711C09062B.idx  editor.cpp.5D13AB0E3FA8940F.idx  editor.h.071F999DDE4F4596.idx  imconfig.h.FAFB265454004CBC.idx  imgui.cpp.1EEC964D96F1A3EA.idx  imgui.h.11596726DAFA63EB.idx  imgui_demo.cpp.96CCD65825A3E17A.idx  imgui_draw.cpp.A7E36DE94558D713.idx  imgui_impl_raylib.h.96C9E9C5C32DE495.idx  imgui_internal.h.9C52BD82193B801F.idx  imgui_tables.cpp.56AA07068A261F73.idx  imgui_widgets.cpp.4B14C0743EC9ED69.idx  imstb_rectpack.h.45ED98EB82A5BD1A.idx  imstb_textedit.h.33426B309FFC658F.idx  imstb_truetype.h.0C2B355951DD3852.idx  main.cpp.F675CC5000F02FA9.idx  raycast.cpp.692FF5EE4E657C95.idx  raycast.h.FBE2840FFDD77D7C.idx  raylib.h.33AFDB6A09084677.idx  raymath.h.EE2343EBC87DB29A.idx  rlImGui.cpp.A40E508A5538D831.idx  rlImGui.h.DC300BF6C283BBB0.idx  rlgl.h.731253B431F53270.idx  scene.cpp.E6AC0D3ABA0C5BCE.idx  scene.h.9A63923904D482B1.idx  shadow.cpp.A26AFABA5A267965.idx  shadow.h.CE22008C40EF9C8C.idx  timeline.cpp.FF83086B7506C136.idx  timeline.h.9D2C33C56E8DC448.idx  types.h.0E8BC6F4DC57806A.idx  ui.cpp.F9E630B544DF1DFA.idx  ui.h.FEB13609AE27DC3C.idx
examples/: bounce.lua  color_cycle.lua  lighting.scene  objects.scene  orbit.lua  orbit.scene  physics.lua  physics.scene  pulse.lua  spin.lua
src/: blender_clone.h  editor.cpp  editor.h  main.cpp
src/builtin_objects/: teapot.cpp  teapot.h
src/builtin_textures/: brick.h  brushed_metal.h  checkerboard.h  grass.texture_array  sand.texture_array  wood.h
src/core/: camera.cpp  camera.h  lighting.cpp  lighting.h  physics.cpp  physics.h  raycast.cpp  raycast.h  scene.cpp  scene.h  scripting.cpp  scripting.h  serializer.cpp  serializer.h  shadow.cpp  shadow.h  timeline.cpp  timeline.h  types.h
src/ui/: ui.cpp  ui.h
